--- a/pom.xml
+++ b/pom.xml
@@ -13,16 +13,22 @@
   <url>http://www.example.com</url>
 
   <properties>
+  <!-- NEW -->
+  <junit.version>4.12</junit.version>
+  <java.version>1.8</java.version>
+  <jacoco.version>0.7.7.201606060606</jacoco.version>
+  <!-- OLD
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+   -->
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
